<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="160dp"
        android:layout_height="220dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:src="@color/colorImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/iv_poster"
        app:layout_constraintStart_toEndOf="@id/iv_poster"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_movie_title_field"
            android:layout_marginEnd="5dp"
            android:textColor="@android:color/black"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ll_title"
        app:layout_constraintStart_toStartOf="@id/ll_title"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_movie_released_at_field"
            android:layout_marginEnd="5dp"
            android:textColor="@android:color/black"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_release_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ll_release"
        app:layout_constraintStart_toStartOf="@id/ll_release"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_movie_rating_field"
            android:layout_marginEnd="5dp"
            android:textColor="@android:color/black"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_synopsis_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginStart="20dp"
        android:text="@string/detail_movie_synopsis_field"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="@id/iv_poster"
        app:layout_constraintTop_toBottomOf="@id/iv_poster" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_synopsis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_synopsis_title"
        app:layout_constraintStart_toStartOf="@id/tv_synopsis_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@android:color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>