...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_ib_share"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="invisible"
            android:elevation="12dp"
            android:innerRadius="0dp"
            android:shape="ring"
...
            android:layout_marginTop="5dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="@+id/iv_poster"
            app:layout_constraintTop_toTopOf="@+id/iv_poster"
            android:background="@android:color/transparent">
            <ImageButton
                android:id="@+id/ib_share"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_share"
...
