<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_list_catalogue"
        android:icon="@drawable/ic_catalogue"
        android:title="@string/catalogue"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_list_favorite"
        android:icon="@drawable/ic_favorite_white"
        android:title="@string/menu_favorite"
        app:showAsAction="always"
        />
</menu>