<resources>
    <string name="app_name">Movie Catalogue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie">Movies</string>
    <string name="tvshow">TV Shows</string>
    <string name="title">Title</string>
    <string name="title_activity_detail_movie">Detail Movie</string>
    <string name="detail_movie_title_field">Title :</string>
    <string name="detail_movie_released_at_field">Released at :</string>
    <string name="detail_movie_rating_field">Rating :</string>
    <string name="detail_movie_synopsis_field">Synopsis</string>
    <string name="menu_favorite">favorite</string>
    <string name="catalogue">catalogue</string>
</resources>